kuja        2005/10/09 10:10:07 UTC	(20051009-2813)
  Log:
  My name is Jeff, not John. And the email was @gamesnet.com, not .net

  Changes:	Modified:
  +1 -1		trunk/src/version.sh (File Modified) 


terminal    2005/10/09 09:04:54 UTC	(20051009-2811)
  Log:
  dlX() win32 hack

  Changes:	Modified:
  +10 -0	trunk/libatheme/linker.c (File Modified) 


terminal    2005/10/09 03:00:52 UTC	(20051009-2809)
  Log:
  fix compile on Apple GCC - run not tested
  

  Changes:	Modified:
  +15 -2	trunk/configure (File Modified) 
  +11 -0	trunk/configure.ac (File Modified) 


terminal    2005/10/09 02:25:13 UTC	(20051009-2807)
  Log:
  oops, fixed delete all case again (untested)

  Changes:	Modified:
  +25 -25	trunk/modules/memoserv/delete.c (File Modified) 


nenolod     2005/10/09 01:39:26 UTC	(20051009-2805)
  Log:
  Fix whitespace issue in /info
  

  Changes:	Modified:
  +1 -1		trunk/src/version.sh (File Modified) 


terminal    2005/10/09 01:35:38 UTC	(20051009-2803)
  Log:
  adding myself to core listing thingey

  Changes:	Modified:
  +1 -0		trunk/src/version.sh (File Modified) 


terminal    2005/10/09 01:29:49 UTC	(20051009-2801)
  Log:
  fixes for 0/string delete index

  Changes:	Modified:
  +2 -2		trunk/modules/memoserv/delete.c (File Modified) 


nenolod     2005/10/09 01:14:40 UTC	(20051009-2799)
  Log:
  memoct_new stuff
  

  Changes:	Modified:
  +3 -0		trunk/backend/flatfile.c (File Modified) 
  +3 -0		trunk/backend/mysql.c (File Modified) 
  +3 -0		trunk/backend/postgresql.c (File Modified) 


nenolod     2005/10/09 01:00:31 UTC	(20051009-2797)
  Log:
  20:00 <+Terminal> be clean, dammit
  

  Changes:	Modified:
  +0 -1		trunk/modules/memoserv/read.c (File Modified) 


nenolod     2005/10/09 00:59:11 UTC	(20051009-2795)
  Log:
  /me fwaps Kog x3
  

  Changes:	Modified:
  +7 -7		trunk/modules/memoserv/read.c (File Modified) 


nenolod     2005/10/09 00:48:55 UTC	(20051009-2793)
  Log: